js/src/tests/test262/built-ins/Error/prototype/stack/prop-desc.js



























verifyPrimordialAccessorProperty(Error.prototype, 'stack', {
  get: { name: 'get stack', length: 0 },
  set: { name: 'set stack', length: 1 },
}, { label: 'Error.prototype.stack' });

reportCompare(0, 0);
